<resources>
    <string name="app_name" translatable="false">BWXplore</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="prompt_password">Password</string>
    <string name="login" translatable="false">Login</string>
    <string name="login_to_bwxplore">Login to BWXplore</string>
    <string name="email" translatable="false">Email</string>
    <string name="top_decor" translatable="false">top decor</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="bwxplore" translatable="false">BWXplore</string>
    <string name="explore">Explore around the city of Banyuwangi</string>
    <string name="get_started">Get Started</string>
    <string name="splash" translatable="false">Splash Activity</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="already_a_member">Already a member?</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="pls_fill_all">Please fill all required files</string>
    <string name="confirmation_incorrect">Your password confirmation is incorrect</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications" translatable="false">Notifications</string>
    <string name="welcome">Welcome,</string>
    <string name="favorite">Favorite</string>
    <string name="popular_places">Popular Places</string>
    <string name="image_popular_place" translatable="false">Image Popular Place</string>
    <string name="related_news">Related News</string>
    <string name="image_news" translatable="false">image news</string>
    <string name="bg_blue" translatable="false">Bg blue</string>
    <string name="date" translatable="false">Date</string>
    <string name="back" translatable="false">back</string>
    <string name="value" translatable="false">value</string>
    <string name="image_place" translatable="false">Image Place</string>
    <string name="explore_places">Explore Places</string>
    <string name="submit" translatable="false">Submit</string>
    <string name="title_explore">Explore</string>
    <string name="title_account">Account</string>
    <string name="tick">Tick</string>
    <string name="loading">Loading...</string>
    <string name="back_to_menu">Back to menu</string>
    <string name="logout">Logout</string>
</resources>