<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="108dp"
    android:layout_marginBottom="8dp">

        <ImageView
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/img_news"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/image_news"
            android:scaleType="centerCrop"
            android:src="@color/black" />

        <TextView
            android:id="@+id/tv_title_news"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="110dp"
            android:layout_marginVertical="8dp"
            app:layout_constraintStart_toEndOf="@id/img_news"
            app:layout_constraintTop_toTopOf="@id/img_news"
            android:layout_marginHorizontal="10dp"
            android:fontFamily="@font/nunitosans_bold"
            android:gravity="center_vertical"
            android:maxLines="2"
            android:text="@string/name"
            android:textColor="@color/text_black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_date"
            android:text="@string/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>