<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="75dp"
    android:background="@drawable/layout_border"
    android:layout_marginBottom="4dp">

    <ImageView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/img_place"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:contentDescription="@string/image_place"
        android:scaleType="centerCrop"
        android:src="@color/black" />

    <TextView
        android:id="@+id/tv_title_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="8dp"
        android:fontFamily="@font/nunitosans_bold"
        android:gravity="center_vertical"
        android:maxLines="2"
        android:text="@string/name"
        android:textColor="@color/text_black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/img_place"
        app:layout_constraintStart_toEndOf="@id/img_place"
        app:layout_constraintTop_toTopOf="@id/img_place" />

    <ImageView
        android:id="@+id/tick"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_tick_point"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/tick" />

</androidx.constraintlayout.widget.ConstraintLayout>