<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.auth.RegisterActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/top_decor"
            android:contentDescription="@string/top_decor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="-20dp"
            android:fontFamily="@font/nunitosans_bold"
            android:text="@string/register"
            android:textColor="@color/blue_primary"
            android:textSize="28sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/nunitosans_regular"
            android:text="@string/name"
            android:textColor="@color/blue_primary"
            android:textSize="16sp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="24dp"
            android:layout_marginVertical="6dp"
            android:background="@drawable/bg_et_rounded">

            <EditText
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/iv_name"
                android:autofillHints="Auto Fill"
                android:background="@android:color/transparent"
                android:fontFamily="@font/nunitosans_regular"
                android:hint="@string/name"
                android:importantForAutofill="yes"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingVertical="12dp"
                android:paddingStart="15dp"
                android:textColorHint="@android:color/darker_gray"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry" />

            <ImageView
                android:id="@+id/iv_name"
                android:layout_width="25dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/name"
                android:src="@drawable/ic_baseline_person_24" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:fontFamily="@font/nunitosans_regular"
            android:text="@string/email"
            android:textColor="@color/blue_primary"
            android:textSize="16sp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="24dp"
            android:layout_marginVertical="6dp"
            android:background="@drawable/bg_et_rounded">

            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/iv_email"
                android:autofillHints="Auto Fill"
                android:background="@android:color/transparent"
                android:fontFamily="@font/nunitosans_regular"
                android:hint="@string/email"
                android:importantForAutofill="yes"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingVertical="12dp"
                android:paddingStart="15dp"
                android:textColorHint="@android:color/darker_gray"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry" />

            <ImageView
                android:id="@+id/iv_email"
                android:layout_width="25dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/email"
                android:src="@drawable/ic_baseline_email_24" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/nunitosans_regular"
            android:text="@string/prompt_password"
            android:textColor="@color/blue_primary"
            android:textSize="16sp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="24dp"
            android:layout_marginVertical="6dp"
            android:background="@drawable/bg_et_rounded">

            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/iv_password"
                android:autofillHints="Auto Fill"
                android:background="@android:color/transparent"
                android:fontFamily="@font/nunitosans_regular"
                android:hint="@string/prompt_password"
                android:importantForAutofill="yes"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingVertical="12dp"
                android:paddingStart="15dp"
                android:textColorHint="@android:color/darker_gray"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry" />

            <ImageView
                android:id="@+id/iv_password"
                android:layout_width="25dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/prompt_password"
                android:src="@drawable/ic_baseline_key_24" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/nunitosans_regular"
            android:text="@string/repeat_password"
            android:textColor="@color/blue_primary"
            android:textSize="16sp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="24dp"
            android:layout_marginVertical="6dp"
            android:background="@drawable/bg_et_rounded">

            <EditText
                android:id="@+id/input_password_repeat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/iv_password_repeat"
                android:autofillHints="Auto Fill"
                android:background="@android:color/transparent"
                android:fontFamily="@font/nunitosans_regular"
                android:hint="@string/repeat_password"
                android:importantForAutofill="yes"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingVertical="12dp"
                android:paddingStart="15dp"
                android:textColorHint="@android:color/darker_gray"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry" />

            <ImageView
                android:id="@+id/iv_password_repeat"
                android:layout_width="25dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/prompt_password"
                android:src="@drawable/ic_baseline_key_24" />

        </RelativeLayout>

        <TextView
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/bg_btn_rounded"
            android:focusable="true"
            android:fontFamily="@font/nunitosans_bold"
            android:gravity="center"
            android:paddingVertical="10dp"
            android:text="@string/register"
            android:textColor="@color/text_white"
            android:textSize="20sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="bottom"
            android:layout_marginTop="20dp"
            android:background="@color/blue_primary">

            <TextView
                android:id="@+id/tvDontHaveAcc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="24dp"
                android:fontFamily="@font/nunitosans_light"
                android:text="@string/already_a_member"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/btn_login"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_marginStart="10sp"
                android:background="@drawable/bg_btn_rounded_white"
                android:fontFamily="@font/nunitosans_bold"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/blue_primary"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/tvDontHaveAcc"
                app:layout_constraintStart_toEndOf="@+id/tvDontHaveAcc"
                app:layout_constraintTop_toTopOf="@+id/tvDontHaveAcc" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</ScrollView>